<!--Thanh Phat Lam n01335598 CENG322-RND-->
<!--Dung Ly n01335598 CENG322-RND-->
<!--Dinh Hoa Tran n01354661 CENG322-RND-->


<resources>
    <string name="app_name">SmartCityMonitor</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="air_quality">Air Quality</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="garbage_fragment">This fragment will use to control Garbage bins</string>
    <string name="garbage_fragment_name" translatable="false">Garbage Fragment</string>
    <string name="city_light_fragment">City Light</string>
    <string name="fragment_4">Snow Level</string>
    <string name="air_quality_fragment">This fragment will monitor the Air Quality of selected area</string>
    <string name="snow_level_fragment">This fragment display snow level to user</string>
    <string name="txtview_smartcity" translatable="false">Welcome to SmartCity</string>
    <string name="txtedit_hint_username">Username</string>
    <string name="txtedit_hint_password">Password</string>
    <string name="smartcitylogin_label">SmartCityLogin</string>
    <string name="bnttxtlogin">Login</string>
    <string name="search_overflow" translatable="false">Search</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="fullnamereg">Full name</string>
    <string name="usernamereg">Username</string>
    <string name="passwordreg">Password</string>
    <string name="emailreg">Email</string>
    <string name="phone_number_reg">Phone Number</string>
    <string name="register_textview_reg">Register</string>
    <string name="sign_in_with_social_account">Sign in with social account</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="air_condition">Air condition</string>
    <string name="co2">CO2</string>
    <string name="no2">NO2</string>
    <string name="pm2_5">PM2.5</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="voc">VOC</string>
    <string name="level">Level</string>
    <string name="high">High</string>
    <string name="average">Average</string>
    <string name="low">Low</string>
    <string name="permission">Permission</string>
    <string name="this_fragment_displays_information_of_the_app">This Fragment displays information of the app</string>
    <string name="on_off">ON/OFF</string>
    <string name="bin3">Bin3</string>
    <string name="bin2">Bin2</string>
    <string name="bin1">Bin1</string>
    <string name="temperature_unit_c_f">Temperature Unit(C/F)</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="aq_aqi">AQI</string>
    <string name="aq_o3">O3</string>
    <string name="aq_so2">SO2</string>
    <string name="aq_co">CO</string>
    <string name="aq_daily_graph">Daily Graph</string>
    <string name="pollutants">Pollutants</string>
    <string name="aq_unit">ug/m3</string>
    <string name="remember_me">Remember me</string>
    <string name="what_do_you_think_of_our_app" translatable="false">What do you think of our App ?</string>
    <string name="what_would_you_like_to_share_with_us" translatable="false">What would you like to share with us ?</string>
    <string name="your_thoughts" translatable="false">Your thoughts</string>
    <string name="how_likely_would_you_recommend_smartcity_to_your_friend" translatable="false">How likely would you recommend Smartcity to your friend ?</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="garbage_bins_fragment_control">Garbage Bins Control</string>
    <string name="city">City</string>
    <string name="textview">TextView</string>
    <string name="address">Address:</string>
    <string name="o3">O3</string>
    <string name="pm1_0">PM1.0</string>
    <string name="garbage_bin">Garbage Bin</string>
    <string name="reclycle_bin">Reclycle Bin</string>
    <string name="organics_bin">Organics Bin</string>
    <string name="warning">Snow storm warning!!!</string>
    <string name="call_support">Call support</string>
    <string name="humidityBanner">Humidity</string>
    <string name="temperatureBanner">Temperature</string>
    <string name="snow_levelBanner">Snow Level</string>
    <string name="random_value_check">Random value Check</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_myprofile">My Profile</string>
    <string name="nav_password">Change Password</string>
    <string name="collect">Collect</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="nav_signout">Sign Out</string>
    <string name="forgetpass"><u>Forget Pass ?</u></string>

    <!--Arrays of location for snow level fragement -->
    <string-array name="snow_locationarray">
        <item>Toronto</item>
        <item>Vancouver</item>
        <item>Montreal</item>
        <item>Moscow</item>
        <item>Old Crow</item>
        <item>Hald Ege</item>
    </string-array>
    <string name="title_activity_app_info">AppInfo</string>
    <string name="collect_mess">Please click on collect button !</string>
    <string name="full_name">Full name</string>
</resources>