<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Userscontrol.LoginActivity"
    android:background="@drawable/bgwallpaper"

    >

    <TextView
        android:id="@+id/txtviewlogin2"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/sign_in_with_social_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:id="@+id/txtviewlogin"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:text="@string/txtview_smartcity"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/txteditusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/loginedittext_bg"
        android:ems="14"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewlogin" />

    <EditText
        android:id="@+id/txteditpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/loginedittext_bg"
        android:ems="14"
        android:hint="@string/txtedit_hint_password"
        android:inputType="textPassword"
        android:maxEms="10"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewlogin"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/bntregister"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/bg_btn"
        android:text="@string/register"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/bntlogin"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/bg_btn"
        android:text="@string/bnttxtlogin"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <CheckBox
        android:id="@+id/checkboxremember"
        android:layout_width="128dp"
        android:layout_height="35dp"
        android:text="Remember me"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <ImageButton
        android:id="@+id/imgbntglogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

</androidx.constraintlayout.widget.ConstraintLayout>